Add input_example to notebooks (#277)

--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>28</td><td>application_1637773802226_0037</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0037/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0037_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1640029426455_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1640029426455_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1640029426455_0007_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -465,17 +465,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started copying local path iris_knn.pkl to hdfs path hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000//Resources/iris_flower/iris_knn.pkl\n",
-      "\n",
-      "Finished copying"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "joblib.dump(iris_knn, IRIS_FLOWER_MODEL_PKL)\n",
     "hdfs.mkdir(IRIS_FLOWER_RESOURCES_PATH)\n",
@@ -519,8 +509,8 @@
      "text": [
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "Exported model irisflowerclassifier with version 1\n",
-      "<hsml.sklearn.model.Model object at 0x7fdcd5bc07f0>\n",
-      "Model export complete: 100%|##########| 6/6 [00:06<00:00,  1.10s/it]                   "
+      "<hsml.sklearn.model.Model object at 0x7f3aa6ab5fd0>\n",
+      "Model export complete: 100%|##########| 6/6 [00:09<00:00,  1.60s/it]                   "
      ]
     }
    ],
@@ -538,7 +528,8 @@
     "mr = conn.get_model_registry()\n",
     "\n",
     "tf_model = mr.sklearn.create_model(MODEL_NAME, \n",
-    "                                   metrics={'accuracy': acc}, \n",
+    "                                   metrics={'accuracy': acc},\n",
+    "                                   input_example=x_df,\n",
     "                                   model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "\n",
     "tf_model.save(IRIS_FLOWER_RESOURCES_PATH)"
@@ -554,6 +545,7 @@
      "output_type": "stream",
      "text": [
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1\n",
+      "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/input_example.json\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_knn.pkl\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/model_schema.json\n",
@@ -660,17 +652,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inferring model server from artifact files: FLASK\n",
-      "Creating serving irisflowerclassifier for artifact /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py ...\n",
-      "Serving irisflowerclassifier successfully created"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
@@ -692,8 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "irisflowerclassifier\n",
-      "mnist"
+      "irisflowerclassifier"
      ]
     }
    ],
@@ -730,7 +711,7 @@
       "Info: \tid: 1,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
-      "        artifact_version: None,\n",
+      "        artifact_version: 0,\n",
       "        model_server: FLASK,\n",
       "        serving_tool: DEFAULT"
      ]
@@ -763,15 +744,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id: 1, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_name: irisflowerclassifier, model_version: 1, artifact_version: None, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 1, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-11-29T13:21:30Z, status: Running, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7fdcd5bc0700>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serving.describe(SERVING_NAME)"
    ]
@@ -801,16 +774,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping serving with name: irisflowerclassifier...\n",
-      "Serving with name: irisflowerclassifier successfully stopped"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if serving.get_status(SERVING_NAME) == \"Running\":\n",
     "    serving.stop(SERVING_NAME)\n",
@@ -828,16 +792,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting serving with name: irisflowerclassifier...\n",
-      "Serving with name: irisflowerclassifier successfully started"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serving.start(SERVING_NAME)"
    ]
@@ -883,26 +838,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'inputs': [[2.6540398666874823, 7.568800587752348, 5.738836759879631, 2.199690465146779]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[5.968634191410266, 2.4040762622950336, 7.834639512665859, 2.5860830806081148]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[6.987777673014331, 2.596674703791047, 3.0958956562394584, 6.207519483587967]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[2.3227535219465842, 1.6280204665559674, 6.113086486730387, 5.803450394431045]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[3.6242736294347058, 1.2951556560196151, 4.215423923126773, 6.867955505983961]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[5.418496512218132, 1.468588369851811, 1.6361176339997714, 4.142621669523214]]}\n",
+      "{'predictions': [1]}\n",
+      "{'inputs': [[3.8178373764585216, 6.645542870942926, 5.944089680594769, 3.3697098745657765]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.207332816344927, 6.253407305307914, 2.893754255148087, 7.911809101319298]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.1630010428399915, 7.168608138657474, 3.090914691352653, 1.262013943196631]]}\n",
       "{'predictions': [0]}\n",
+      "{'inputs': [[6.725361395282784, 4.286659837341885, 6.156378266489909, 2.6705593171304387]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[5.16616795017345, 1.1542533850936527, 6.945345120658225, 5.082204027369219]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[4.4774032553038605, 2.8928713845053244, 5.3008702618595205, 2.0883647143461492]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[2.3198763364435884, 2.5916419843796437, 7.595302727798609, 2.467777512720213]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[4.5422396552792215, 4.9668647769783645, 6.139911268487624, 3.6616967710072865]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.848108237499049, 4.3012828670909, 2.5332564966096456, 6.103516079720544]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.483681262344087, 4.8242698178166386, 3.503416030635369, 2.2762774017934455]]}\n",
       "{'predictions': [1]}\n",
+      "{'inputs': [[1.198817467791785, 2.85038746276332, 5.966364565332574, 7.541443011291955]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[7.26657433009014, 5.308204292349167, 5.8130236509975735, 7.439181618106126]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[5.906829086110267, 1.2892190912171633, 3.3933996379608047, 5.24751088465701]]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [0]}"
+      "{'inputs': [[6.7180658622286815, 6.333968104638813, 4.581759342769892, 2.8924806857678727]]}\n",
+      "{'predictions': [2]}"
      ]
     }
    ],
@@ -911,6 +886,7 @@
     "\n",
     "for i in range(20):\n",
     "    data = {\"inputs\" : [[random.uniform(1, 8) for i in range(NUM_FEATURES)]]}\n",
+    "    print(data)\n",
     "    response = serving.make_inference_request(SERVING_NAME, data)\n",
     "    print(response)"
    ]
@@ -999,19 +975,19 @@
      "output_type": "stream",
      "text": [
       "timeout.. no more messages to read from topic\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965221,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468723,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965289,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468803,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965393,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468901,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965482,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468994,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
