--- a/notebooks/featurestore/hsfs/time_travel/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/time_travel_scala.ipynb
@@ -402,6 +402,7 @@
     "                .partitionKeys(Seq(\"year\"))\n",
     "                .hudiPrecombineKey(\"id\") \n",
     "                .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                .onlineEnabled(true)\n",
     "                .build())"
    ]
   },
@@ -426,6 +427,7 @@
     "                    .primaryKeys(Seq(\"id\"))\n",
     "                    .partitionKeys(Seq(\"zipcode\"))\n",
     "                    .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                    .onlineEnabled(true)\n",
     "                    .build())"
    ]
   },
@@ -450,6 +452,7 @@
     "                .primaryKeys(Seq(\"id\"))\n",
     "                .hudiPrecombineKey(\"year\")\n",
     "                .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                .onlineEnabled(true)\n",
     "                .build())"
    ]
   },
@@ -475,7 +478,8 @@
     }
    ],
    "source": [
-    "val extra_hudi_options = Map(\"hoodie.insert.shuffle.parallelism\" -> \"1\", \n",
+    "val extra_hudi_options = Map(\"hoodie.bulkinsert.shuffle.parallelism\" -> \"1\",\n",
+    "    \"hoodie.insert.shuffle.parallelism\" -> \"1\", \n",
     "    \"hoodie.upsert.shuffle.parallelism\" -> \"1\",\n",
     "    \"hoodie.parquet.compression.ratio\" -> \"0.5\")"
    ]
