--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create connection to hsfs"
+    "### Create Connection to HSFS"
    ]
   },
   {
@@ -64,14 +64,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define online transformation\n",
+    "# Define Online Transformation\n",
     "To be able to attach transformation function to training datasets it has to be either part of the library\n",
     "[installed](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/python.html?highlight=install#installing-libraries) in Hopsworks\n",
     "or attached when starting a [Jupyter notebook](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/jupyter.html?highlight=jupyter)\n",
     "or [Hopsworks job](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/jobs.html).\n",
     "\n",
-    "Don't decorate transformation function with Pyspark `@udf` or `@pandas_udf`, as well as don't use any Pyspark dependencies.\n",
-    "    HSFS will decorate transformation function only if it is used inside Pyspark application.\n"
+    "Don't decorate the transformation function with Pyspark `@udf` or `@pandas_udf`, as well as don't use any Pyspark dependencies.\n",
+    "HSFS will decorate transformation function only if it is used inside Pyspark application.\n",
+    "    \n",
+    "To successfully execute this example please install `hsfs_transformers` library from https://github.com/davitbzh/hsfs-transformer-template\n"
    ]
   },
   {
@@ -583,7 +585,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -597,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
