Use model.model_path attribute

--- a/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
+++ b/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
@@ -160,10 +160,9 @@
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "MODEL_PATH=\"/Models/\" + best_model.name\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
+    "                                    best_model.model_path, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=True, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
     "                                    inference_logging=\"ALL\", # with KFServing, select the type of inference data to log into Kafka, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
