--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -388,10 +388,9 @@
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = \"mnist\"\n",
-    "MODEL_PATH = \"/Models/\" + best_model.name\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
+    "                                    best_model.model_path, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=False, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
     "                                    inference_logging=\"ALL\", # ALL for default deployments. With KFServing, fine-grained inference logging is supported, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
