--- a/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "SCRIPT_PATH = best_model.path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
+    "SCRIPT_PATH = best_model.model_path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
     "                         SCRIPT_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
