Use model.model_path and model.version_path attribute for serving examples (#281)

--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -656,7 +656,7 @@
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "SCRIPT_PATH = best_model.path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
+    "SCRIPT_PATH = best_model.version_path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
     "                         SCRIPT_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
