[HOPSWORKS-2930] Update schema and model_schema paths in test notebooks

--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -518,8 +518,8 @@
     "MODEL_NAME = \"irisflowerclassifier\"\n",
     "\n",
     "import hsml\n",
-    "from hsml.utils.schema import Schema\n",
-    "from hsml.utils.model_schema import ModelSchema\n",
+    "from hsml.schema import Schema\n",
+    "from hsml.model_schema import ModelSchema\n",
     "\n",
     "input_schema = Schema(x_df)\n",
     "output_schema = Schema(y_df)\n",
