--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -156,8 +156,8 @@
     "    from hops import tensorboard\n",
     "\n",
     "    import hsml\n",
-    "    from hsml.utils.schema import Schema\n",
-    "    from hsml.utils.model_schema import ModelSchema\n",
+    "    from hsml.schema import Schema\n",
+    "    from hsml.model_schema import ModelSchema\n",
     "    from hops import hdfs\n",
     "\n",
     "    import pydoop.hdfs as pydoop\n",
