--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -122,8 +122,8 @@
     "    from hops import tensorboard\n",
     "\n",
     "    import hsml\n",
-    "    from hsml.utils.schema import Schema\n",
-    "    from hsml.utils.model_schema import ModelSchema\n",
+    "    from hsml.schema import Schema\n",
+    "    from hsml.model_schema import ModelSchema\n",
     "    from hops import hdfs\n",
     "\n",
     "    batch_size=32\n",
