--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "The Hopsworks feature store is a centralized repository, within an organization, to manage machine learning features. A feature is a measurable property of a phenomenon. It could be a simple value such as the age of a customer, or it could be an aggregated value, such as the number of transactions made by a customer in the last 30 days.\n",
     "\n",
-    "A feature is not restricted to an numeric value, it could be a string representing an address, or an image.\n",
+    "A feature is not restricted to a numeric value, it could be a string representing an address, or an image.\n",
     "\n",
     "![Feature Store Overview](../images/overview.svg \"Feature Store Overview\")\n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "The Hopsworks feature feature store library is called `hsfs` (**H**opswork**s** **F**eature **S**tore). \n",
     "The library is Apache V2 licensed and available [here](https://github.com/logicalclocks/feature-store-api). The library is currently available for Python and JVM languages such as Scala and Java.\n",
-    "In this notebook we are going to cover Python part.\n",
+    "In this notebook, we are going to cover Python part.\n",
     "\n",
     "You can find the complete documentation of the library here: \n",
     "\n",
