add train_split property to examples

--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -43,7 +43,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1612782748969_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1612782748969_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1612782748969_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1643314752454_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1643314752454_0004/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-10-0-0-63.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1643314752454_0004_01_000001/demo_fs_davit000__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -112,15 +112,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f94701b38d0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
@@ -143,15 +135,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f948851b610>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
@@ -167,27 +151,22 @@
    "source": [
     "#### Split the training dataset\n",
     "\n",
-    "If you are training a model, you might want to split the training datasets into different slices (training, test and validation). HSFS allows you to specify the split sizes. You can also provide a seed for the random splitter, if you want to reproduce a training dataset."
+    "If you are training a model, you might want to split the training datasets into different slices (training, test and validation). If `splits` is set, you must also provide the name of the split that is going to be used for training. The statistics of this split will be used for transformation functions if necessary. \n",
+    "\n",
+    "HSFS allows you to specify the split sizes. You can also provide a seed for the random splitter, if you want to reproduce a training dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9488528510>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
     "                               data_format=\"csv\",\n",
     "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},\n",
+    "                               train_split=\"train\", \n",
     "                               version=3)\n",
     "\n",
     "td.save(query, {'header': 'true'})"
@@ -234,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `fg0`.`sales_last_quarter_store_dep`, `fg0`.`store`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_year_store`, `fg0`.`sales_last_quarter_store`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_month_store`, `fg0`.`dept`, `fg0`.`sales_last_six_month_store`, `fg0`.`weekly_sales`, `fg0`.`is_holiday`, `fg0`.`date`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
-      "FROM `demo_fs_meb10000`.`sales_fg_1` `fg0`\n",
-      "INNER JOIN `demo_fs_meb10000`.`exogenous_fg_1` `fg1` ON `fg0`.`date` = `fg1`.`date` AND `fg0`.`store` = `fg1`.`store`\n",
+      "SELECT `fg0`.`store`, `fg0`.`dept`, `fg0`.`date`, `fg0`.`weekly_sales`, `fg0`.`is_holiday`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_quarter_store_dep`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_month_store`, `fg0`.`sales_last_quarter_store`, `fg0`.`sales_last_six_month_store`, `fg0`.`sales_last_year_store`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
+      "FROM `demo_fs_davit000`.`sales_fg_1` `fg0`\n",
+      "INNER JOIN `demo_fs_davit000`.`exogenous_fg_1` `fg1` ON `fg0`.`date` = `fg1`.`date` AND `fg0`.`store` = `fg1`.`store`\n",
       "VersionWarning: No version provided for getting training dataset `sales_model`, defaulting to `1`."
      ]
     }
@@ -267,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,22 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f94884e0150>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
     "                               data_format=\"csv\",\n",
-    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},                                \n",
+    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},   \n",
+    "                               train_split=\"train\",                                 \n",
     "                               version=5)\n",
     "\n",
     "td.save(df)"
@@ -319,22 +291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f948849f210>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
     "                               data_format=\"tfrecord\",\n",
-    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},                                \n",
+    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1}, \n",
+    "                               train_split=\"train\",                                 \n",
     "                               version=6)\n",
     "\n",
     "td.save(df)"
@@ -351,26 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
-      "|sales_last_quarter_store_dep|store|sales_last_month_store_dep|sales_last_year_store|sales_last_quarter_store|sales_last_six_month_store_dep|sales_last_year_store_dep|sales_last_month_store|dept|sales_last_six_month_store|weekly_sales|is_holiday|               date|fuel_price|unemployment|        cpi|\n",
-      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
-      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  55|                       0.0|    32362.95|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
-      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  94|                       0.0|    63787.83|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
-      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  22|                       0.0|    17597.83|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
-      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  30|                       0.0|     9488.37|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
-      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|   2|                       0.0|    85812.69|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
-      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
-      "only showing top 5 rows"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.get_training_dataset(\"sales_model\", 2)\n",
     "td.show(5)"
@@ -385,17 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "295125"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td = fs.get_training_dataset(\"sales_model\", 6)\n",
     "td.read(\"train\").count()"
@@ -422,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,17 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<PrefetchDataset shapes: ((32, 14), (32,)), types: (tf.float32, tf.float32)>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_input_processed"
    ]
@@ -456,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,24 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ParallelMapDataset shapes: {cpi: (), dept: (), fuel_price: (), is_holiday: (), sales_last_month_store: (), sales_last_month_store_dep: (), sales_last_quarter_store: (), sales_last_quarter_store_dep: (), sales_last_six_month_store: (), sales_last_six_month_store_dep: (), sales_last_year_store: (), sales_last_year_store_dep: (), store: (), unemployment: (), weekly_sales: ()}, types: {cpi: tf.float32, dept: tf.int64, fuel_price: tf.float32, is_holiday: tf.int64, sales_last_month_store: tf.float32, sales_last_month_store_dep: tf.float32, sales_last_quarter_store: tf.float32, sales_last_quarter_store_dep: tf.float32, sales_last_six_month_store: tf.float32, sales_last_six_month_store_dep: tf.float32, sales_last_year_store: tf.float32, sales_last_year_store_dep: tf.float32, store: tf.int64, unemployment: tf.float32, weekly_sales: tf.float32}>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_input_not_processed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,20 +435,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<PrefetchDataset shapes: ((32, 14), (32,)), types: (tf.float32, tf.float32)>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_input_custum_processed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
