--- a/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
@@ -28,7 +28,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1634566917647_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634566917647_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1634566917647_0007_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1643314752454_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1643314752454_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-10-0-0-63.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1643314752454_0009_01_000001/demo_fs_davit000__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,8 @@
     "td_meta = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
     "                               data_format=\"tfrecord\",\n",
-    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},                                \n",
+    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1}, \n",
+    "                               train_split=\"train\",      \n",
     "                               version=8)\n",
     "\n",
     "td_meta.save(query)"
