--- a/notebooks/featurestore/hsfs/snowflake/snowflake_python.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/snowflake_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "048dad6b",
+   "id": "f9b09d81",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd4d43db",
+   "id": "6ee9400f",
    "metadata": {},
    "source": [
     "<h2 style=\"color: #1EB382;font-weight: bold;\">Snowflake Integration</h2>\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b074d897",
+   "id": "203a2c64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2f235c",
+   "id": "d59c5952",
    "metadata": {},
    "source": [
     "<h3 style=\"color: #1EB382;font-weight: bold;\">On-demand (External) Feature Groups</h3>\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77042838",
+   "id": "1275c910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad09f871",
+   "id": "04e8499c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53f6067f",
+   "id": "38ed36ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2686b149",
+   "id": "72e78399",
    "metadata": {},
    "source": [
     "<h3 style=\"color: #1EB382;font-weight: bold;\">Training dataset</h3>\n",
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f22222",
+   "id": "8b2aa266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "916d4bff",
+   "id": "72f89fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,7 @@
     "                               label=['total_ss_net_profit'],\n",
     "                               data_format=\"csv\",\n",
     "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},\n",
+    "                               train_split=\"train\", \n",
     "                               statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
     "\n",
     "td.save(query)"
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90ac4a4",
+   "id": "70373c97",
    "metadata": {},
    "source": [
     "<h3 style=\"color: #1EB382;font-weight: bold;\">Online serving</h3>\n",
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9b92db4",
+   "id": "c7705e3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b81f35",
+   "id": "2ea16c9b",
    "metadata": {},
    "outputs": [],
    "source": [
