--- a/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
+++ b/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
@@ -338,6 +338,7 @@
     "    version=1,\n",
     "    data_format=\"tfrecord\",\n",
     "    splits={\"train\": 0.8, \"test\": 0.2},\n",
+    "    train_split=\"train\",                            \n",
     "    seed=12,\n",
     "    label=[\"weekly_sales\"])\n",
     "\n",
@@ -373,9 +374,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
