--- a/notebooks/featurestore/azure/azure-ml-studio.ipynb
+++ b/notebooks/featurestore/azure/azure-ml-studio.ipynb
@@ -554,6 +554,7 @@
     "    version=1,\n",
     "    data_format=\"tfrecord\",\n",
     "    splits={\"train\": 0.8, \"test\": 0.2},\n",
+    "    train_split=\"train\",                            \n",
     "    seed=12,\n",
     "    #storage_connector=storage,\n",
     "    label=[\"weekly_sales\"])\n",
@@ -651,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
